infra/rds.tf
resource "aws_db_subnet_group" "rds_subnet_group" {
  name       = "rds-subnet-group"
  subnet_ids = [aws_subnet.private_subnet_1.id, aws_subnet.private_subnet_2.id]
}

resource "aws_db_instance" "mydb" {
  identifier              = "demo-db"
  engine                  = "mysql"
  instance_class           = "db.t3.micro"
  allocated_storage       = 20
  username                = "admin"
  password                = "StrongPassword123!"
  db_subnet_group_name    = aws_db_subnet_group.rds_subnet_group.name
  vpc_security_group_ids  = [aws_security_group.rds_sg.id]
  publicly_accessible     = false
  skip_final_snapshot     = true
  deletion_protection     = false
  tags = { Name = "demo-rds" }
}
